--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             
                   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                    <li><a href="#Experience" class="nav-link px-2 link-dark">Experience</a></li>
-                    <li><a href="#projects" class="nav-link px-2 link-dark">Projects</a></li>
+                    <li><a href="#Experience" class="nav-link px-2 link-secondary">Experience</a></li>
+                    <li><a href="#projects" class="nav-link px-2 link-secondary">Projects</a></li>
                   </ul>
             
                   <div class="col-md-3 text-end">
