--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             
                   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                    <li><a href="#Experience" class="nav-link px-2 link-secondary">Experience</a></li>
-                    <li><a href="#projects" class="nav-link px-2 link-secondary">Projects</a></li>
+                    <li><a href="#Experience" class="nav-link px-2 link-dark">Experience</a></li>
+                    <li><a href="#projects" class="nav-link px-2 link-dark">Projects</a></li>
                   </ul>
             
                   <div class="col-md-3 text-end">
@@ -171,8 +171,8 @@
                                 class="row py-3 d-flex align-items-center justify-content-center">
                                 <div
                                     class="col-12 border rounded-3 text-center align-items-center"
-                                    style="width: 50%;">
-                                    <img src="./images/owasplogo.png" class="rounded-circle my-3" width="130"
+                                    style="width: 70%;">
+                                    <img src="./images/owasplogo.png" class="rounded-circle my-3 py-1" width="130"
                                         height="130" alt>
                                 </div>
                                 <div class="col-12 pt-3">
@@ -189,8 +189,8 @@
                                 class="row py-3 d-flex align-items-center justify-content-center">
                                 <div
                                     class="col-12 border rounded-3 text-center align-items-center"
-                                    style="width: 50%;">
-                                    <img src="./images/aceLogo.webp" class="rounded-circle my-3" width="130"
+                                    style="width: 70%;">
+                                    <img src="./images/aceLogo.webp" class="rounded-circle my-3 py-1" width="130"
                                         height="130" alt>
                                 </div>
                                 <div class="col-12 pt-3">
@@ -207,8 +207,8 @@
                                 class="row py-3 d-flex align-items-center justify-content-center">
                                 <div
                                     class="col-12 border rounded-3 text-center align-items-center"
-                                    style="width: 50%;">
-                                    <img src="./images/ksupahaarlogo.jpg" class="rounded-circle my-3" width="130"
+                                    style="width: 70%;">
+                                    <img src="./images/ksupahaarlogo.jpg" class="rounded-circle my-3 py-1" width="130"
                                         height="130" alt>
                                 </div>
                                 <div class="col-12 pt-3">
